'微信自动发送消息'

--- a/app/src/main/res/xml/access_service_config.xml
+++ b/app/src/main/res/xml/access_service_config.xml
@@ -1,7 +1,8 @@
 <accessibility-service xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accessibilityEventTypes="typeNotificationStateChanged|typeWindowStateChanged"
-    android:accessibilityFeedbackType="feedbackGeneric"
-    android:accessibilityFlags="flagDefault"
-    android:canRetrieveWindowContent="true"
-    android:description="@string/app_name"
-    android:notificationTimeout="100"/>
+                       android:accessibilityEventTypes="typeAllMask"
+                       android:accessibilityFeedbackType="feedbackGeneric"
+                       android:accessibilityFlags="flagDefault"
+                       android:canRetrieveWindowContent="true"
+                       android:description="@string/app_name"
+                       android:packageNames="com.tencent.mm"
+                       android:notificationTimeout="100"/>
